--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>THE GREATEST PB&J SANDWICH EVER!!!</title>
+<title>Final Project!!!</title>
 <link rel="stylesheet"href="style.css">
 
 
@@ -8,28 +8,28 @@
 <body>
 <div>
 <header>
-    <h1>THE GREATEST PB&J SANDWICH EVER</h1>
-    <H2>YOUR GUIDE TO THE BEST PB&J YOU EVER HAD,PROMISE!</H2>
+    <h1>The World of Sam Cooke</h1>
+    <H2>One Of The Great's you will love!</H2>
 </header>
 <article>
-    <img src="pbj_img.jpg" alt="PBJ Sandwich">
-    <h3>Follow these instructions to the best sandwhich ever !</h3>
-    <p>This scientifically proven to be the best, It is science, so you have to trust it. Is is so good it is not allowed to enter the world sanwhick competetion. real i am not lying.</p>
-    <h3>what you need.</h3>
+    <img src="">
+    <h3></h3>
+    <p>.</p>
+    <h3>.</h3>
 <ul>
-    <li>Bread</li>
-    <li>Peanut Butter</li>
-    <li>Jelly</li>
-    <li>Knife</li>
-    <li>Unicorn Blood</li>
-    <li>The Blood Of your enemies</li>
-    <li>Moms Love</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
 <ol>
-    <li>Get Two Pieces of Bread</li>
-    <li>Spread Peanut Butter On One Slice Of Bread</li>
-    <li>Spread Jelly On Other Slice Of Bread</li>
-    <li>Stack Slices Of Bread</li>
-    <li>Toss In Trash, Order Pizza Instead</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
 </ol>
 
 </ul>
