--- a/index.html
+++ b/index.html
@@ -13,24 +13,10 @@
 </header>
 <article>
     <img src="">
-    <h3></h3>
+    <h3>Welcome to the world of "Sam Cooke", the Legend of Soul!</h3>
     <p>.</p>
     <h3>.</h3>
-<ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-<ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ol>
+
 
 </ul>
 </article>
